<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A5DE38A"
    tools:context=".Suma2numActivity">

    <EditText
        android:id="@+id/txtnum2p3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="24dp"
        android:autofillHints="num1"
        android:ems="10"
        android:hint="@string/p3textnum2f"
        android:inputType="number"
        android:textColorHint="@color/rojo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="278dp"
        android:layout_height="41dp"
        android:layout_marginTop="64dp"
        android:text="@string/titulop3"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:text="@string/p3textnum1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/txtnum1p3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="12dp"
        android:autofillHints="num1"
        android:ems="10"
        android:hint="@string/p3textnum1f"
        android:inputType="number"
        android:textColorHint="@color/rojo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="12dp"
        android:text="@string/p3textnum2"
        android:textColor="@color/black"
        android:textColorHint="@color/rojo"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum1p3" />

    <Button
        android:id="@+id/btnsumap3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="calcular"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum2p3"
        tools:text="@string/p3btntext" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="28dp"
        android:text="@string/p3lbltext"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsumap3" />

    <TextView
        android:id="@+id/lblresp3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>